Fixed Problem with not showing new styles for search dropdown block

--- a/resources/sass/nav/_suggestions.sass
+++ b/resources/sass/nav/_suggestions.sass
@@ -1,7 +1,7 @@
 .tt-dropdown-menu
-    margin-top: 1px
-    padding-top: 0
-    border: none
+    margin-top: 1px !important
+    padding-top: 0 !important
+    border: none !important
 
     .search
         background-color: $main-color-lighter
@@ -10,26 +10,26 @@
         padding-left: 8px
 
     .result-heading
-        position: relative
-        line-height: 30px
-        font-size: 16px
-        border: none
-        text-shadow: none
-        background-color: $main-color-lighter
+        position: relative !important
+        line-height: 30px !important
+        font-size: 16px !important
+        border: none !important
+        text-shadow: none !important
+        background-color: $main-color-lighter !important
         color: $font-light-color
-        padding-right: 12px
-        padding-left: 12px
+        padding-right: 12px !important
+        padding-left: 12px !important
         text-transform: uppercase
-        letter-spacing: 0.3px
-        text-shadow: 1px 1px 1px #02020259
+        letter-spacing: 0.3px !important
+        text-shadow: 1px 1px 1px #02020259 !important
 
         .collapsible
-            display: none
+            display: none !important
 
         .result-count
-            color: $font-light-color
-            opacity: 1
-            font-size: 17px
+            color: $font-light-color !important
+            opacity: 1 !important
+            font-size: 17px !important
 
     .tt-suggestion
         padding: 2px 7px
